--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   </header>
   <nav>
         <a class="linkb" href="#home" target="_self">Home</a>
+        <a class="linkb" href="#noticias">noticias</a>
         <a class="linkb" href="#curiosidade" target="_self">Curiosidade</a>
-        <a class="linkb" href="#faleconosco" target="_self">Contato</a>
+        <a class="linkb" href="#faleconosco" target="_self">Fale conosco</a>
   </nav>
       <main>
         <article>
-          <h1>História do Mascote do Android</h1>
+          <h1 id="noticias">História do Mascote do Android</h1>
           <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
           <h2>A primeira versão</h2>
           <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://danmorrill.org/" target="_blank">Dan Morrill 🔗</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape 🔗</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
